--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,17 +1,43 @@
 .header-container {
-    background: linear-gradient(0deg, #023047 32%, #5b7cbb 100%);
+    // background: linear-gradient(0deg, #023047 32%, #5b7cbb 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 50px 20px 90px 20px;
+    position: relative;
+    overflow-x: hidden;
+
+
+
+    .header-background-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100vw;
+        max-height: 800px;
+        overflow-x: hidden;
+    
+
+        .header-background {
+            object-fit: cover;
+            width: 100vw;
+            filter: brightness(75%);
+            height: 100%;
+            overflow-x: hidden;
+
+        }
+    }
 
 
     .header-content-container {
         display: flex;
         gap: 70px 75px;
         flex-wrap: wrap;
+        z-index: 10;
         justify-content: center;
+        padding: 60px 20px 220px 20px;
+
 
         .header-img {
             object-fit: cover;
@@ -25,18 +51,20 @@
             max-width: 600px;
             color: white;
             word-spacing: 5px;
+            text-align: center;
         }
 
         .header-p {
-            font-size: 24px;
+            font-size: 20px;
             padding: 15px 0;
-            margin-top: 10px;
+            margin-top: 0px;
             max-width: 580px;
             line-height: 30px;
             word-spacing: 3px;
             color: white;
-            opacity: 0.87;
-            font-weight: 400;
+            opacity: 0.9;
+            font-weight: 500;
+            text-align: center;
         }
 
         .header-info-container {
