--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -2,3 +2,4 @@ $primary-font: "Lato", Helvetica, sans-serif;
 $primary-color: #023047;
 $secondary-color: #5b7cbb;
 $gray-color: rgb(239, 240, 243);
+$dropdown-box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
