cities dropdown added - dropdown functions updated

--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -30,6 +30,7 @@
 
                 .open-dropdown-div {
                     position: absolute;
+                    z-index: 100;
                     top: 25px;
                 }
             }
